--- a/R Projects/Financial Review Analysis/Financial Report.ipynb
+++ b/R Projects/Financial Review Analysis/Financial Report.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# The Challenge\n",
     "\n",
-    "You have been hired by the “Future 500” magazine*. The stakeholders have supplied you a list of 500 companies and would like you to create some draft visualisations for their upcoming online publication.  \n",
+    "Stakeholders have supplied you a list of 500 companies and would like you to create some draft visualisations for their upcoming online publication.  \n",
     "\n",
     "They have requested the following charts:  \n",
     "• A scatterplot classified by industry showing revenue, expenses, profit  \n",
